--- a/Notebooks/Model_Training_and_Predictions.ipynb
+++ b/Notebooks/Model_Training_and_Predictions.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-06T11:35:20.330727Z",
-     "start_time": "2021-09-06T11:35:15.587974Z"
+     "end_time": "2021-09-26T12:30:22.669262Z",
+     "start_time": "2021-09-26T12:30:13.771268Z"
     }
    },
    "outputs": [],
@@ -78,14 +78,14 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-06T11:35:20.579541Z",
-     "start_time": "2021-09-06T11:35:20.330727Z"
+     "end_time": "2021-09-26T12:30:23.052305Z",
+     "start_time": "2021-09-26T12:30:22.714928Z"
     }
    },
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('data/df_train_prepped.csv')\n",
-    "df_test = pd.read_csv('data/df_test_prepped.csv', )"
+    "df_train = pd.read_csv('../data/df_train_prepped.csv')\n",
+    "df_test = pd.read_csv('../data/df_test_prepped.csv', )"
    ]
   },
   {
@@ -107,8 +107,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-06T11:35:20.595529Z",
-     "start_time": "2021-09-06T11:35:20.579541Z"
+     "end_time": "2021-09-26T12:31:34.827771Z",
+     "start_time": "2021-09-26T12:31:34.800788Z"
     }
    },
    "outputs": [],
@@ -139,8 +139,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-06T11:35:20.659129Z",
-     "start_time": "2021-09-06T11:35:20.595529Z"
+     "end_time": "2021-09-26T12:31:35.109766Z",
+     "start_time": "2021-09-26T12:31:35.056300Z"
     }
    },
    "outputs": [
@@ -181,8 +181,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-06T11:35:20.692402Z",
-     "start_time": "2021-09-06T11:35:20.659129Z"
+     "end_time": "2021-09-26T12:38:41.709621Z",
+     "start_time": "2021-09-26T12:38:41.686998Z"
     }
    },
    "outputs": [
@@ -222,8 +222,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-06T11:35:20.729836Z",
-     "start_time": "2021-09-06T11:35:20.692402Z"
+     "end_time": "2021-09-26T12:38:42.556991Z",
+     "start_time": "2021-09-26T12:38:42.521807Z"
     }
    },
    "outputs": [
@@ -278,8 +278,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-06T11:35:20.763620Z",
-     "start_time": "2021-09-06T11:35:20.733833Z"
+     "end_time": "2021-09-26T12:38:46.581568Z",
+     "start_time": "2021-09-26T12:38:46.559217Z"
     }
    },
    "outputs": [],
@@ -294,7 +294,7 @@
     "    \n",
     "def predict_challenge_test_data(model, test_data, filename):\n",
     "    submission_predictions = model.predict(test_data)\n",
-    "    df_submission = pd.read_csv('data/sample_submission.csv')\n",
+    "    df_submission = pd.read_csv('../data/sample_submission.csv')\n",
     "    df_submission[TARGET] = submission_predictions\n",
     "    df_submission.to_csv(filename, index=False)"
    ]
@@ -304,8 +304,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-06T11:35:20.802099Z",
-     "start_time": "2021-09-06T11:35:20.771664Z"
+     "end_time": "2021-09-26T12:38:48.460068Z",
+     "start_time": "2021-09-26T12:38:48.429657Z"
     }
    },
    "outputs": [],
@@ -444,7 +444,7 @@
    "outputs": [],
    "source": [
     "model = log_reg.fit(ct.transform(df_train[cols_to_train]), df_train[TARGET].values)\n",
-    "predict_challenge_test_data(model, df_test_sparse, 'Predictions/baseline_predictions_1.csv')"
+    "predict_challenge_test_data(model, df_test_sparse, '../Predictions/baseline_predictions_1.csv')"
    ]
   },
   {
@@ -562,7 +562,7 @@
    "outputs": [],
    "source": [
     "model = log_reg.fit(ct.transform(df_train[cols_to_train]), df_train[TARGET].values)\n",
-    "predict_challenge_test_data(model, df_test_sparse, 'Predictions/test_predictions_1.csv')"
+    "predict_challenge_test_data(model, df_test_sparse, '../Predictions/test_predictions_1.csv')"
    ]
   },
   {
@@ -2794,11 +2794,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-07T10:04:34.603472Z",
-     "start_time": "2021-09-07T10:03:37.015913Z"
+     "end_time": "2021-09-26T12:42:11.935754Z",
+     "start_time": "2021-09-26T12:39:15.531021Z"
     }
    },
    "outputs": [
@@ -2808,7 +2808,7 @@
        "LogisticRegression(C=10, fit_intercept=False, penalty='l1', solver='saga')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2838,11 +2838,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-07T10:04:34.781850Z",
-     "start_time": "2021-09-07T10:04:34.762259Z"
+     "end_time": "2021-09-26T12:42:12.111030Z",
+     "start_time": "2021-09-26T12:42:12.090068Z"
     }
    },
    "outputs": [
@@ -2860,30 +2860,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-07T10:04:45.524850Z",
-     "start_time": "2021-09-07T10:04:45.400394Z"
+     "end_time": "2021-09-26T12:42:12.434065Z",
+     "start_time": "2021-09-26T12:42:12.242125Z"
     }
    },
    "outputs": [],
    "source": [
     "df_test_sparse = ct.transform(df_test[cols_to_train])\n",
-    "predict_challenge_test_data(final_model, df_test_sparse, 'Predictions/final_predictions.csv')"
+    "predict_challenge_test_data(final_model, df_test_sparse, '../Predictions/final_predictions.csv')"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-26T12:58:15.294446Z",
+     "start_time": "2021-09-26T12:58:15.270985Z"
+    }
+   },
+   "outputs": [],
    "source": [
-    "## Kaggle Results"
+    "import joblib"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-26T17:24:08.258003Z",
+     "start_time": "2021-09-26T17:24:08.205362Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../model/model.sav']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(final_model, '../model/model.sav')"
+   ]
   }
  ],
  "metadata": {
