final additions and modifications

--- a/Notebooks/EDA_and_Data_Prep.ipynb
+++ b/Notebooks/EDA_and_Data_Prep.ipynb
@@ -3979,7 +3979,7 @@
     "\n",
     "df_test[NUM_IN_TWEETS] = df_test[TEXT].apply(get_numbers_in_tweet)\n",
     "df_test[SENTIMENT] = df_test[TEXT].apply(lambda x: nlp(x)._.polarity)\n",
-    "df_test[SENTIMENT_ROUND] = df_test[SENTIMENT].apply(round)\n",
+    "df_test[SENTIMENT_ROUND] = df_test[SENTIMENT].apply(sentiment_to_binary)\n",
     "\n",
     "df_test[LOCATION].fillna('', inplace=True)\n",
     "df_test[LOCATIONS], df_test[IDENTIFIABLE_LOCATION] = zip(*df_test[LOCATION].apply(check_location))\n",
